--- a/Formulario/Formulario/MainPage.xaml
+++ b/Formulario/Formulario/MainPage.xaml
@@ -3,10 +3,54 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:local="clr-namespace:Formulario" 
              x:Class="Formulario.MainPage">
-    <StackLayout>
-        <StackLayout>
+    <StackLayout Margin="0,50">
+        <StackLayout Orientation="Horizontal">
             <Label Text="Nombre"
-                   />
+                   VerticalTextAlignment="Center"
+                   FontAttributes="Bold"
+                   FontSize="18"/>
+            <Entry x:Name="UserName"
+                   Placeholder="Digite su Nombre"
+                   Keyboard="Text"
+                   HorizontalOptions="FillAndExpand"/>
         </StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <Label Text="Apellido"
+                   VerticalTextAlignment="Center"
+                   FontAttributes="Bold"
+                   FontSize="18"/>
+            <Entry x:Name="UserLastName"
+                   Placeholder="Digite su Apellido"
+                   Keyboard="Text"
+                   HorizontalOptions="FillAndExpand"/>
+        </StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <Label Text="Correo electrónico"
+                   VerticalTextAlignment="Center"
+                   FontAttributes="Bold"
+                   FontSize="18"/>
+            <Entry x:Name="UserEmail"
+                   Placeholder="Digite su Correo"
+                   Keyboard="Email"
+                   HorizontalOptions="FillAndExpand"/>
+        </StackLayout>
+        <StackLayout Orientation="Horizontal">
+            <Label Text="Télefono"
+                   VerticalTextAlignment="Center"
+                   FontAttributes="Bold"
+                   FontSize="18"/>
+            <Entry x:Name="UserTelefono"
+                   Placeholder="Digite su Numero de Celular"
+                   Keyboard="Telephone"
+                   HorizontalOptions="FillAndExpand"/>
+        </StackLayout>
+        <Button x:Name="ClienteBtF"
+                Text="Continuar"
+                BorderRadius="10"
+                BorderColor="Black"
+                TextColor="White"
+                Margin="30,0,30,0"
+                BackgroundColor="Navy"
+                Clicked="Continue_Tapped"/>
     </StackLayout>
 </ContentPage>
